--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="content" class="row">
      <button name="7"  class="btn-normal btn-number" >7</button>
      <button name="8"  class="btn-normal btn-number" >8</button>
-     <button name="9"  class="btn-normal btn-number" btn-number> 9</button>
+     <button name="9"  class="btn-normal btn-number"> 9</button>
      <button name="del"  class="fBtn btn-del">DEL</button>
      <button name="4"  class="btn-normal btn-number" >4</button>
      <button name="5"  class="btn-normal btn-number" >5</button>
